<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ifunsoed13.rpl.lapar.SignupActivity">

    <TextView
        android:id="@+id/label_signup_title"
        style="@style/AuthHeader"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/auth_title"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/label_signup_subtitle"
        style="@style/AuthHeader"
        android:layout_below="@+id/label_signup_title"
        android:text="@string/auth_sibtitle"
        android:textSize="13sp"/>

    <LinearLayout
        android:id="@+id/form_signup"
        style="@style/AuthForm"
        android:layout_below="@+id/label_signup_subtitle">

        <EditText
            android:id="@+id/input_signup_username"
            style="@style/AuthInput"
            android:hint="@string/label_username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/input_signup_password"
            style="@style/AuthInput"
            android:hint="@string/label_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/input_signup_email"
            style="@style/AuthInput"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_signup"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_signup_cancel"
            style="@style/AuthButton"
            android:layout_below="@id/form_signup"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/label_button_signup_cancel"/>

        <Button
            android:id="@+id/button_signup"
            style="@style/AuthButton"
            android:layout_below="@id/form_signup"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/label_button_signup"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_signup"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_devider"
        android:src="@mipmap/button_devider"/>
</RelativeLayout>
