<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ifunsoed13.rpl.lapar.UploadActivity"
    tools:showIn="@layout/activity_upload">

    <ImageView
        android:id="@+id/imgDisplay"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/content_desc_image_to_upload"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDisplay"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBatal"
            style="@style/AuthButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/label_button_upload_cancel"/>

        <Button
            android:id="@+id/btnKirim"
            style="@style/AuthButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/label_button_upload"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDisplay"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_devider"
        android:src="@mipmap/button_devider"/>

</RelativeLayout>
